Add .NET MAUI desktop host
